# PlaneText

./: Cargo.toml  Dockerfile  README.md  cookie  run.sh  soluce.py
pages/: flag.txt  logs.txt  planes  randomgenerator.rs  uselessfile_lol.html  welcome.html
src/: const_.rs  crypto.rs  error.rs  http_.rs  init.rs  lib.rs  main.rs  serve.rs
